0028186: Foundation Classes, NCollection_List - methods "Remove" and "Contains" prevent template usage

::Remove() and ::Contains() are now defined as template methods
to allow using NCollection_List with types without quality operator.